# eth-gas-estimator

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  gas_estimator.opam
.github/workflows/: workflow.yml
scripts/: install-deps.sh  lint.sh
src/alchemy-node/: alchemy_request.ml  dune  snapshot.ml  sorted_list.ml
src/common/: common_types.ml  constant.ml  dune  sorted_list.ml  utilities.ml
src/main/: cmd_alchemy.ml  cmd_vanilla.ml  dune  main.ml  sorted_list.ml
src/server/: api_server.ml  dune
src/vanilla-node/: request.ml
test/: dune  mempool.json  snapshot.json  stats.json  test.ml  test_values.ml  testables.ml
